--- a/infotech/index.html
+++ b/infotech/index.html
@@ -121,7 +121,7 @@
 
 
 <script>
-    // Get elements
+    
     const menuIcon = document.querySelector('.mobile-home-icon i');
     const newNavContainer = document.querySelector('.new-nav-container');
     const closeIcon = document.querySelector('.close-icon i');
@@ -129,13 +129,13 @@
 
     // Show new nav on menu icon click
     menuIcon.addEventListener('click', () => {
-        newNavContainer.style.display = 'flex'; // show menu
+        newNavContainer.style.display = 'flex'; 
         mobileNav.style.display = "none";
     });
 
     // Hide new nav on close icon click
     closeIcon.addEventListener('click', () => {
-        newNavContainer.style.display = 'none'; // hide menu
+        newNavContainer.style.display = 'none'; 
     });
 </script>
 
